# college-api

./: .env.example  .flake8  .gitignore  alembic.ini  pyproject.toml  restart.sh
app/: main.py
app/api/v1/: headers.py  main.py  pages.py  tokens.py  users.py
app/config/: __init__.py  db.py  jwt_tokens.py
app/db/: session.py
app/enums/: __init__.py  blocks.py
app/middlewares/: auth.py
app/models/: __init__.py  blocks.py  header_tabs.py  headers.py  pages.py  users.py
app/repositories/: __init__.py  headers.py  pages.py  users.py
app/schemas/: __init__.py  config_base_model.py  headers.py  pages.py  tokens.py  users.py
app/utils/: __init__.py  tokens.py
deploy/: Dockerfile  docker-compose.yml
migrations/: env.py
migrations/versions/: 09b1cf972f94_005_add_users_is_main_administrator_.py  755224ffd3ae_004_set_users_username_unique.py  cd6feb8387cf_003_add_users_model.py  db4db080a31b_001_add_headers_models.py  e6ee8eb8110e_002_add_pages_models.py
tests/: conftest.py
tests/inegration/: test_headers.py  test_pages.py  test_users.py
